WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
96027
[BlackBerry] Exiting fullscreen mode can leave user stuck without Browser menus
https://bugs.webkit.org/show_bug.cgi?id=96027
Summary
[BlackBerry] Exiting fullscreen mode can leave user stuck without Browser menus
Max Feil
Reported
2012-09-06 14:39:43 PDT
The changes for
https://bugs.webkit.org/show_bug.cgi?id=87337
(landed as
http://svn.webkit.org/repository/webkit/trunk@119119
) introduced a bug. The same conditions are not checked on enter fullscreen vs. exit. Web sites such as
http://videojs.com
and youtube's mobile HTML5 player make the div container of the video element go fullscreen. This is allowed in WebPagePrivate::enterFullScreenForElement() but disallowed in WebPagePrivate::exitFullScreenForElement(). I am fixing this by allowing containers of video elements to exit fullscreen.
Attachments
Patch
(2.05 KB, patch)
2012-09-06 14:47 PDT
,
Max Feil
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Max Feil
Comment 1
2012-09-06 14:47:53 PDT
Created
attachment 162593
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-08 21:28:56 PDT
Comment on
attachment 162593
[details]
Patch Clearing flags on attachment: 162593 Committed
r127975
: <
http://trac.webkit.org/changeset/127975
>
WebKit Review Bot
Comment 3
2012-09-08 21:29:00 PDT
All reviewed patches have been landed. Closing bug.
Max Feil
Comment 4
2012-11-02 12:51:41 PDT
Closing bug for patch that landed a long time ago.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug